--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -45,8 +45,8 @@
         <img src="../iPortfolio/headshot.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Blake Ros</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-github"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/blake-ros" class="twitter"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/blakeros/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="#" class="note"><i class="bx bx-file-blank" name="notepad"></i></a>
         </div>
       </div>
@@ -617,14 +617,14 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span>Blake Ros 2020</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by Blake Ros</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
