--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -83,33 +83,33 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>My name is Blake Ros and I love to code! Like most young kids I always loved to play video games but never thought I was smart enough to build the games that I enjoyed as a kid. While attending Cal State Fullerton I worked at Finishline and I quickly acquired a taste for rare sneakers which were always released online. I was exposed to automated checkout software which initially sparked my interest. After completing a Python course post graduation I was hooked. I decided to pursue web development by attending LearningFuze coding bootcamp. The rest is history.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="./headshot.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
-            <p class="font-italic">
+            <h3>Web Developer</h3>
+            <!-- <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
-            </p>
+            </p> -->
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : New York, USA</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 5 March 1992</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.blakeros.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> (949) 370-5202</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Location:</strong> Orange County, CA</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 30</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> email@example.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 28</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Business-Marketing</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> blakerosdodger@yahoo.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
