added wicked sales staged photos for applications section

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -338,10 +338,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/wicked-sales-staged-2.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/blake-ros/wicked-sales-js" data-gall="portfolioGallery" class="venobox" title="GitHub"><i class="bx bxl-github"></i></a>
+                <a href="https://wicked-sales.blakeros.com/" title="Live Link"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
