removed testimonials section

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -310,7 +310,7 @@
 
         <div class="section-title">
           <h2>Applications</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Here are some of the applications I've developed!</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -467,7 +467,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
+    <!-- <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -534,7 +534,7 @@
 
         </div>
 
-      </div>
+      </div> -->
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
