--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -467,6 +467,14 @@
             <!-- <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
             <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p> -->
           </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon"><i class="icofont-tasks-alt"></i></div>
+            <img alt="react" src="assets/img/portfolio/react.svg">
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon"><i class="icofont-tasks-alt"></i></div>
+            <img alt="nodejs" src="assets/img/portfolio/nodejs.svg">
+          </div>
         </div>
 
       </div>
