added jquery logo

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -475,6 +475,10 @@
             <div class="icon"><i class="icofont-tasks-alt"></i></div>
             <img alt="nodejs" src="assets/img/portfolio/nodejs.svg">
           </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon"><i class="icofont-tasks-alt"></i></div>
+            <img alt="jquery" src="assets/img/portfolio/jquery.svg">
+          </div>
         </div>
 
       </div>
