--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -432,51 +432,51 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="icofont-computer"></i></div>
+            <div class="center">Bootstrap</div>
             <img alt="GitHub Icon" src="assets/img/portfolio/bootstrap.svg">
             <!-- <h4 class="title"><a href="">Lorem Ipsum</a></h4>
             <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p> -->
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="icofont-chart-bar-graph"></i></div>
+            <div class="center">JavaScript</div>
             <img alt="JavaScript" src="assets/img/portfolio/JavaScript.svg">
             <!-- <h4 class="title"><a href="">Dolor Sitema</a></h4>
             <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p> -->
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="icofont-earth"></i></div>
+            <div class="center">Express</div>
             <img alt="amazon" src="assets/img/portfolio/express.svg">
             <!-- <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
             <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p> -->
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="icofont-image"></i></div>
+            <div class="center">HTML5</div>
             <img alt="HTML" src="assets/img/portfolio/html.svg">
             <!-- <h4 class="title"><a href="">Magni Dolores</a></h4>
             <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p> -->
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="icofont-settings"></i></div>
+            <div class="center">CSS3</div>
             <img alt="css" src="assets/img/portfolio/css.svg">
             <!-- <h4 class="title"><a href="">Nemo Enim</a></h4>
             <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p> -->
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="icofont-tasks-alt"></i></div>
+            <div class="center">Postgresql</div>
             <img alt="chrome" src="assets/img/portfolio/postgresql.svg">
             <!-- <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
             <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p> -->
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="icofont-tasks-alt"></i></div>
+            <div class="center">React</div>
             <img alt="react" src="assets/img/portfolio/react.svg">
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="icofont-tasks-alt"></i></div>
+            <div class="center">Node.js</div>
             <img alt="nodejs" src="assets/img/portfolio/nodejs.svg">
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="icofont-tasks-alt"></i></div>
+            <div class="center">Jquery</div>
             <img alt="jquery" src="assets/img/portfolio/jquery.svg">
           </div>
         </div>
