--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -348,10 +348,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/rommates-staged-3.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/blake-ros/roommates" data-gall="portfolioGallery" class="venobox" title="GitHub"><i class="bx bxl-github"></i></a>
+                <a href="#" title="Under Construction"><i class="bx bx-error"></i></a>
               </div>
             </div>
           </div>
