--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -45,9 +45,9 @@
         <img src="../iPortfolio/headshot.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Blake Ros</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://github.com/blake-ros" class="twitter"><i class="bx bxl-github"></i></a>
-          <a href="https://www.linkedin.com/in/blakeros/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="../iPortfolio/assets/img/Blake_Ros_Resume_v6.pdf" class="note"><i class="bx bx-file-blank" name="notepad"></i></a>
+          <a href="https://github.com/blake-ros" class="twitter" title="GitHub"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/blakeros/" class="linkedin" title="LinkedIn"><i class="bx bxl-linkedin"></i></a>
+          <a href="../iPortfolio/assets/img/Blake_Ros_Resume_v6.pdf" class="note" title="Resume"><i class="bx bx-file-blank" name="notepad"></i></a>
         </div>
       </div>
 
