--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -46,8 +46,8 @@
         <h1 class="text-light"><a href="index.html">Blake Ros</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/blake-ros" class="twitter" title="GitHub"><i class="bx bxl-github"></i></a>
-          <a href="https://www.linkedin.com/in/blakeros/" class="linkedin" title="LinkedIn"><i class="bx bxl-linkedin"></i></a>
-          <a href="../iPortfolio/assets/img/Blake_Ros_Resume_v6.pdf" class="note" title="Resume"><i class="bx bx-file-blank" name="notepad"></i></a>
+          <a href="https://www.linkedin.com/in/blakeros/" class="twitter" title="LinkedIn"><i class="bx bxl-linkedin"></i></a>
+          <a href="../iPortfolio/assets/img/Blake_Ros_Resume_v6.pdf" class="twitter" title="Resume"><i class="bx bx-file-blank" name="notepad"></i></a>
         </div>
       </div>
 
@@ -126,7 +126,7 @@
 
     <!-- ======= Facts Section ======= -->
     <section id="facts" class="facts">
-      <div class="container">
+      <!-- <div class="container">
 
         <div class="section-title">
           <h2>Facts</h2>
@@ -169,12 +169,12 @@
 
         </div>
 
-      </div>
+      </div> -->
     </section><!-- End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
-      <div class="container">
+      <!-- <div class="container">
 
         <div class="section-title">
           <h2>Skills</h2>
@@ -235,7 +235,7 @@
 
         </div>
 
-      </div>
+      </div> -->
     </section><!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
@@ -356,7 +356,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -414,7 +414,7 @@
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
