--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -55,7 +55,7 @@
         <ul>
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume"><i class="bx bx-code-curly"></i> <span> Skills</span></a></li>
+          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span> Resume</span></a></li>
           <li><a href="#portfolio"><i class="bx bx-code"></i> Applications</a></li>
           <li><a href="#services"><i class="bx bx-server"></i> Tools</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
@@ -243,8 +243,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Skills</h2>
-          <p>Here are some of the technologies I've worked with:</p>
+          <h2>Resume</h2>
+          <p>Here is a background about me:</p>
         </div>
 
         <div class="row">
