--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -251,20 +251,20 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Blake Ros</h4>
+              <p><em>Full Stack Web Developer with a background in React, JavaScript, Node.js, and Postgresql</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Orange County, CA</li>
+                <li>(949) 370-5202</li>
+                <li>blakerosdodger@yahoo.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <h4>Bachelor's Degree, Business-Marketing</h4>
+              <!-- <h5>2015 - 2016</h5> -->
+              <p><em>Cal State University of Fullerton, Fullerton, CA</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
             </div>
             <div class="resume-item">
