updated about me section

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Blake Ros and I love to code! Like most young kids I always loved to play video games but never thought I was smart enough to build the games that I enjoyed as a kid. While attending Cal State Fullerton I worked at Finishline and I quickly acquired a taste for rare sneakers which were always released online. I was exposed to automated checkout software which initially sparked my interest. After completing a Python course post graduation I was hooked. I decided to pursue web development by attending LearningFuze coding bootcamp. The rest is history.</p>
+          <p>My name is Blake Ros and I love to code! Like most young kids I always loved to play video games but never thought I was smart enough to build the games that I enjoyed as a kid. While attending Cal State Fullerton I worked at Finishline and I quickly acquired a taste for rare sneakers which were always released online. I was exposed to automated checkout software which initially sparked my interest in software development. After completing a Python course post graduation I was hooked. I decided to pursue web development by attending LearningFuze coding bootcamp. The rest is history.</p>
         </div>
 
         <div class="row">
