added a description to my applications section

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -333,6 +333,8 @@
                 <a href="https://github.com/blake-ros/mlb-memory-match" data-gall="portfolioGallery" class="venobox" title="GitHub"><i class="bx bxl-github"></i></a>
                 <a href="https://memory-match.blakeros.com/" title="Live Link"><i class="bx bx-link"></i></a>
               </div>
+              <div class="center pt-3"><b>Major League Memory</b></div>
+              <div>A JavaScript memory match application based on Major League Baseball teams. Users must match all the cards to hit a home-run!</div>
             </div>
           </div>
 
