fixed application section to include a short description of the application that was built

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -333,9 +333,9 @@
                 <a href="https://github.com/blake-ros/mlb-memory-match" data-gall="portfolioGallery" class="venobox" title="GitHub"><i class="bx bxl-github"></i></a>
                 <a href="https://memory-match.blakeros.com/" title="Live Link"><i class="bx bx-link"></i></a>
               </div>
-              <div class="center pt-3"><b>Major League Memory</b></div>
-              <div>A JavaScript memory match application based on Major League Baseball teams. Users must match all the cards to hit a home-run!</div>
             </div>
+            <div class="center pt-3"><b>Major League Memory</b></div>
+            <div class="summary pt-3">A JavaScript memory match application based on Major League Baseball teams. Users must match all the cards to hit a home-run!</div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
@@ -346,6 +346,8 @@
                 <a href="https://wicked-sales.blakeros.com/" title="Live Link"><i class="bx bx-link"></i></a>
               </div>
             </div>
+            <div class="center pt-3"><b>Novelty Keycaps</b></div>
+            <div class="summary pt-3">A full stack Node.js and React e-commerce application</div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
@@ -356,6 +358,8 @@
                 <a href="#" title="Under Construction"><i class="bx bx-error"></i></a>
               </div>
             </div>
+            <div class="center pt-3"><b>Roommates</b></div>
+            <div class="summary pt-3">This project is under construction!</div>
           </div>
 
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
