changed titles of sections to get rid of the small description

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -244,7 +244,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Here is a background about me:</p>
+          <!-- <p>Here is a background about me:</p> -->
         </div>
 
         <div class="row">
@@ -310,7 +310,7 @@
 
         <div class="section-title">
           <h2>Applications</h2>
-          <p>Here are some of the applications I've developed!</p>
+          <!-- <p>Here are some of the applications I've developed!</p> -->
         </div>
 
         <!-- <div class="row" data-aos="fade-up">
@@ -433,7 +433,7 @@
 
         <div class="section-title">
           <h2>Tools</h2>
-          <p>Here are some of the tools I've worked with:</p>
+          <!-- <p>Here are some of the tools I've worked with:</p> -->
         </div>
 
         <div class="row">
