--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -42,7 +42,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="../iPortfolio/headshot.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="./headshot.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Blake Ros</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/blake-ros" class="twitter" title="GitHub"><i class="bx bxl-github"></i></a>
