fixed github links

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -330,7 +330,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/memory-match-staged.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="https://github.com/blake-ros/mlb-memory-match" data-gall="portfolioGallery" class="venobox" title="GitHub"><i class="bx bxl-github"></i></a>
+                <a href="https://github.com/blake-ros/mlb-memory-match" title="GitHub"><i class="bx bxl-github"></i></a>
                 <a href="https://memory-match.blakeros.com/" title="Live Link"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -342,7 +342,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/wicked-sales-staged-2.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="https://github.com/blake-ros/wicked-sales-js" data-gall="portfolioGallery" class="venobox" title="GitHub"><i class="bx bxl-github"></i></a>
+                <a href="https://github.com/blake-ros/wicked-sales-js" title="GitHub"><i class="bx bxl-github"></i></a>
                 <a href="https://wicked-sales.blakeros.com/" title="Live Link"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -354,7 +354,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/rommates-staged-3.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="https://github.com/blake-ros/roommates" data-gall="portfolioGallery" class="venobox" title="GitHub"><i class="bx bxl-github"></i></a>
+                <a href="https://github.com/blake-ros/roommates" title="GitHub"><i class="bx bxl-github"></i></a>
                 <a href="#" title="Under Construction"><i class="bx bx-error"></i></a>
               </div>
             </div>
