--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -45,9 +45,9 @@
         <img src="./headshot.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Blake Ros</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://github.com/blake-ros" class="twitter" title="GitHub"><i class="bx bxl-github"></i></a>
-          <a href="https://www.linkedin.com/in/blakeros/" class="twitter" title="LinkedIn"><i class="bx bxl-linkedin"></i></a>
-          <a href="./Blake_Ros_Resume_v6.pdf" class="twitter" title="Resume"><i class="bx bx-file-blank" name="notepad"></i></a>
+          <a href="https://github.com/blake-ros" class="twitter" target="_blank" title="GitHub"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/blakeros/" target="_blank" class="twitter" title="LinkedIn"><i class="bx bxl-linkedin"></i></a>
+          <a href="./Blake_Ros_Resume_v6.pdf" target="_blank" class="twitter" title="Resume"><i class="bx bx-file-blank" name="notepad"></i></a>
         </div>
       </div>
 
@@ -99,7 +99,6 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 5 March 1992</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> (949) 370-5202</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Location:</strong> Orange County, CA</li>
                 </ul>
@@ -247,7 +246,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Blake Ros</h4>
               <p><em>Full Stack Web Developer with a background in React, JavaScript, Node.js, and Postgresql</em></p>
@@ -338,7 +337,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/wicked-sales-staged-2.PNG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/novelty-preview-image.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="https://github.com/blake-ros/wicked-sales-js" title="GitHub"><i class="bx bxl-github"></i></a>
                 <a href="https://wicked-sales.blakeros.com/" title="Live Link"><i class="bx bx-link"></i></a>
