--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -99,14 +99,15 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> (949) 370-5202</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Location:</strong> Orange County, CA</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> <a href="tel:+19493705202">(949) 370-5202</a></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> <a href="mailto:blakerosdodger@yahoo.com">blakerosdodger@yahoo.com</a></li>
+
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
+                  <li><i class="icofont-rounded-right"></i> <strong>Location:</strong> Orange County, CA</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Business-Marketing</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> blakerosdodger@yahoo.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
