--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -47,7 +47,7 @@
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/blake-ros" class="twitter" target="_blank" title="GitHub"><i class="bx bxl-github"></i></a>
           <a href="https://www.linkedin.com/in/blakeros/" target="_blank" class="twitter" title="LinkedIn"><i class="bx bxl-linkedin"></i></a>
-          <a href="./Blake_Ros_Resume_v6.pdf" target="_blank" class="twitter" title="Resume"><i class="bx bx-file-blank" name="notepad"></i></a>
+          <a href="./Blake_Ros_Resume_V7.pdf" target="_blank" class="twitter" title="Resume"><i class="bx bx-file-blank" name="notepad"></i></a>
         </div>
       </div>
 
