updated about me section

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -83,7 +83,14 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Blake Ros and I love to code! Like most young kids I always loved to play video games but never thought I was smart enough to build the games that I enjoyed as a kid. While attending Cal State Fullerton I worked at Finishline and I quickly acquired a taste for rare sneakers which were always released online. I was exposed to automated checkout software which initially sparked my interest in software development. After completing a Python course post graduation I was hooked. I decided to pursue web development by attending LearningFuze coding bootcamp. The rest is history.</p>
+          <p>My name is Blake Ros and I love to code! Growing up, I always enjoyed playing video games, but I never imagined building
+          them myself. Programming seemed like magic, an unattainable skill, until an experience I had while attending Cal State
+          Fullerton. In my time between classes I sold shoes at Finishline where I acquired a taste for rare sneakers. The limited
+          edition pairs I wanted were selling out instantly to buyers that had developed automated checkout software. It was my
+          interest in understanding how they were built. Using this software initially sparked my desire to learn how
+          to code. After completing a Python course post graduation I was hooked. I decided to pursue web development by attending
+          LearningFuze coding bootcamp. The rest is history.</p>
+          <!-- <p>My name is Blake Ros and I love to code! Like most young kids I always loved to play video games but never thought I was smart enough to build the games that I enjoyed as a kid. While attending Cal State Fullerton I worked at Finishline and I quickly acquired a taste for rare sneakers which were always released online. I was exposed to automated checkout software which initially sparked my interest in software development. After completing a Python course post graduation I was hooked. I decided to pursue web development by attending LearningFuze coding bootcamp. The rest is history.</p> -->
         </div>
 
         <div class="row">
