updated memory match description

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -340,7 +340,7 @@
               </div>
             </div>
             <div class="center pt-3"><b>Major League Memory</b></div>
-            <div class="summary pt-3">A JavaScript memory match application based on Major League Baseball teams. Users must match all the cards to hit a home-run!</div>
+            <div class="summary pt-3">A JavaScript memory match game based on Major League Baseball teams. Users must match all the cards to hit a home-run!</div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
