updated novelty keycaps description

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -352,7 +352,7 @@
               </div>
             </div>
             <div class="center pt-3"><b>Novelty Keycaps</b></div>
-            <div class="summary pt-3">A full stack Node.js and React e-commerce application</div>
+            <div class="summary pt-3">A full stack Node.js and React e-commerce application. Users can browse the catalog of keyboard supplies. Users can add these items to their cart and check out selected items.</div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
