--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -108,7 +108,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> <a href="tel:+19493705202">(949) 370-5202</a></li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> <a href="mailto:blakerosdodger@yahoo.com">blakerosdodger@yahoo.com</a></li>
-
+                  <li><i class="icofont-rounded-right"></i> <strong>Education:</strong> LearningFuze Graduate</li>
                 </ul>
               </div>
               <div class="col-lg-6">
