adjusted size of the images

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -441,20 +441,20 @@
           <!-- <p>Here are some of the tools I've worked with:</p> -->
         </div>
 
-        <div class="row">
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+        <div class="row justify-content-around">
+          <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up">
             <div class="center applicationsFont">JavaScript</div>
             <img alt="JavaScript Icon" src="assets/img/portfolio/JavaScript.svg">
             <!-- <h4 class="title"><a href="">Lorem Ipsum</a></h4>
             <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p> -->
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="center applicationsFont">React</div>
             <img alt="React Icon" src="assets/img/portfolio/react.svg">
             <!-- <h4 class="title"><a href="">Dolor Sitema</a></h4>
             <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p> -->
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="center applicationsFont">Bootstrap</div>
             <img alt="Bootstrap Icon" src="assets/img/portfolio/bootstrap.svg">
             <!-- <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
