--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -441,7 +441,7 @@
           <!-- <p>Here are some of the tools I've worked with:</p> -->
         </div>
 
-        <div class="row justify-content-around">
+        <div class="row justify-content-between">
           <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up">
             <div class="center applicationsFont">JavaScript</div>
             <img alt="JavaScript Icon" src="assets/img/portfolio/JavaScript.svg">
@@ -460,33 +460,33 @@
             <!-- <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
             <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p> -->
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="center applicationsFont">Node.js</div>
             <img alt="Node.js Icon" src="assets/img/portfolio/nodejs.svg">
             <!-- <h4 class="title"><a href="">Magni Dolores</a></h4>
             <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p> -->
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="center applicationsFont">Express</div>
             <img alt="Express Icon" src="assets/img/portfolio/express.svg">
             <!-- <h4 class="title"><a href="">Nemo Enim</a></h4>
             <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p> -->
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+          <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="center applicationsFont">Postgresql</div>
             <img alt="Postgresql Icon" src="assets/img/portfolio/postgresql.svg">
             <!-- <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
             <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p> -->
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+          <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="center applicationsFont">HTML5</div>
             <img alt="HTML5 Icon" src="assets/img/portfolio/html.svg">
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+          <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="center applicationsFont">CSS3</div>
             <img alt="CSS3 Icon" src="assets/img/portfolio/css.svg">
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+          <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="center applicationsFont">Jquery</div>
             <img alt="jquery" src="assets/img/portfolio/jquery.svg">
           </div>
