--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -47,7 +47,7 @@
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/blake-ros" class="twitter" target="_blank" title="GitHub"><i class="bx bxl-github"></i></a>
           <a href="https://www.linkedin.com/in/blakeros/" target="_blank" class="twitter" title="LinkedIn"><i class="bx bxl-linkedin"></i></a>
-          <a href="./Blake_Ros_Resume_V7.pdf" target="_blank" class="twitter" title="Resume"><i class="bx bx-file-blank" name="notepad"></i></a>
+          <a href="./Blake_Ros_Resume_V8.pdf" target="_blank" class="twitter" title="Resume"><i class="bx bx-file-blank" name="notepad"></i></a>
         </div>
       </div>
 
@@ -85,7 +85,7 @@
           <h2>About</h2>
           <p>My name is Blake Ros and I love to code! Growing up, I always enjoyed playing video games, but I never imagined building
           them myself. Programming seemed like magic, an unattainable skill, until an experience I had while attending Cal State
-          Fullerton. In my time between classes I sold shoes at Finishline where I acquired a taste for rare sneakers. The limited
+          Fullerton. In my time between classes, I sold shoes at Finishline where I acquired a taste for rare sneakers. The limited
           edition pairs I wanted were selling out instantly to buyers that had developed automated checkout software. It was my
           interest in understanding how they were built. Using this software initially sparked my desire to learn how
           to code. After completing a Python course post graduation, I was hooked. I decided to pursue web development by attending
@@ -454,7 +454,7 @@
 
         <div class="row justify-content-between">
           <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up">
-            <div class="center applicationsFont">JavaScript</div>
+            <div class="center applicationsFont">JavaScript (ES5/ES6)</div>
             <img alt="JavaScript Icon" src="assets/img/portfolio/JavaScript.svg">
             <!-- <h4 class="title"><a href="">Lorem Ipsum</a></h4>
             <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p> -->
@@ -484,7 +484,7 @@
             <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p> -->
           <!-- </div> -->
           <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="center applicationsFont">Postgresql</div>
+            <div class="center applicationsFont">PostgreSQL</div>
             <img alt="Postgresql Icon" src="assets/img/portfolio/postgresql.svg">
             <!-- <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
             <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p> -->
@@ -498,7 +498,7 @@
             <img alt="CSS3 Icon" src="assets/img/portfolio/css.svg">
           </div>
           <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="center applicationsFont">Jquery</div>
+            <div class="center applicationsFont">jQuery</div>
             <img alt="jquery" src="assets/img/portfolio/jquery.svg">
           </div>
         </div>
