--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -8,6 +8,12 @@
   <title>Blake Ros</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
+  <meta property="og:title" content="Blake's Portfolio Site">
+  <meta property="og:image" content="https://www.blakeros.com/background-image.png">
+  <meta property="og:image:width" content="180">
+  <meta property="og:image:height" content="110">
+  <meta property="og:description" content="Blake Ros, Full Stack Developer">
+  <meta property="og:url" content="https://www.blakeros.com">
 
   <!-- Favicons -->
   <link href="assets/img/favicon-blake.ico" rel="icon">
