--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -288,7 +288,16 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Sales</h4>
+              <h4>Part-Time Developer</h4>
+              <h5>May 2020 - Present</h5>
+              <p><em>Mindstill, LLC</em></p>
+              <ul>
+                <li>Build initial website to display application design and showcase application features</li>
+                <li>Manage content by designing the website for full mobile responsiveness</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Account Manager</h4>
               <h5>2015 - Present</h5>
               <p><em>Shells and Fish Import and Export, Orange County, CA</em></p>
               <ul>
