added Teaching Assistnat experience to professional experience section

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -297,6 +297,16 @@
               </ul>
             </div>
             <div class="resume-item">
+              <h4>Web Development Teaching Assistant</h4>
+              <h5>May 2020 - Present</h5>
+              <p><em>LearningFuze</em></p>
+              <ul>
+                <li>Explain coding best practices and debug applications written by LearningFuze students</li>
+                <li>Support students by clarifying difficult concepts to better understand code</li>
+                <li>Provide mentorship and assist with teaching LearningFuze students programming fundamentals</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Account Manager</h4>
               <h5>2015 - Present</h5>
               <p><em>Shells and Fish Import and Export, Orange County, CA</em></p>
