updated resume and professional experience section

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -53,7 +53,7 @@
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/blake-ros" class="twitter" target="_blank" title="GitHub"><i class="bx bxl-github"></i></a>
           <a href="https://www.linkedin.com/in/blakeros/" target="_blank" class="twitter" title="LinkedIn"><i class="bx bxl-linkedin"></i></a>
-          <a href="./Blake_Ros_Resume_V8.pdf" target="_blank" class="twitter" title="Resume"><i class="bx bx-file-blank" name="notepad"></i></a>
+          <a href="./Blake_Ros_Resume_Sept_3.pdf" target="_blank" class="twitter" title="Resume"><i class="bx bx-file-blank" name="notepad"></i></a>
         </div>
       </div>
 
@@ -77,7 +77,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Blake Ros</h1>
-      <p>I'm a <span class="typed" data-typed-items="Web Developer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Software Engineer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -263,7 +263,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Blake Ros</h4>
-              <p><em>Full Stack Web Developer with a background in React, JavaScript, Node.js, and PostgreSQL</em></p>
+              <p><em>Full Stack Software Engineer with a background in React, JavaScript, Node.js, and PostgreSQL</em></p>
               <ul>
                 <li>Orange County, CA</li>
                 <li>(949) 370-5202</li>
@@ -298,8 +298,9 @@
               <h5>May 2020 - Present</h5>
               <p><em>Mindstill, LLC</em></p>
               <ul>
-                <li>Build initial website to display application design and showcase application features</li>
-                <li>Manage content by designing the website for full mobile responsiveness</li>
+                <li>Work with CEO directly on company's website design using HTML5, CSS3, and JavaScript</li>
+                <li>Build fully responsive, mobile friendly website to showcase company's mobile application</li>
+                <li>Collaborate with CEO on developing and implementing long term web strategy</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -315,7 +316,7 @@
             <div class="resume-item">
               <h4>Account Manager</h4>
               <h5>2015 - Present</h5>
-              <p><em>Shells and Fish Import and Export, Orange County, CA</em></p>
+              <p><em>Shells and Fish Import and Export</em></p>
               <ul>
                 <li>Concentrate on generating new business leads by cold-calling and networking at annual seafood
                 trade show in Boston</li>
