made changes to Meta Tags for linkedin

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
   <meta property="og:title" content="Portfolio Website">
-  <meta property="og:image" content="https://www.blakeros.com/background-image.png">
+  <meta property="og:image" content="https://www.blakeros.com/portfolio-photo.jpg">
   <meta property="og:description" content="Blake Ros, Software Engineer">
   <meta property="og:url" content="https://www.blakeros.com">
 
